<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.ui.MainActivity">


        <TextView
            android:id="@+id/textMyNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/my_notes"
            android:textColor="@color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_20ssp"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_search"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMyNotes">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorSearchIcon" />

            <EditText
                android:id="@+id/inputSearch"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@null"

                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_notes"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerview"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:clipToPadding="false"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
            app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />

        <LinearLayout
            android:id="@+id/layoutQuickActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorQuickActionBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageAddNote"
                android:background="@drawable/ic_add_outline"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageAddImage"
                android:background="@drawable/ic_image"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageAddWebLink"
                android:background="@drawable/ic_web_link"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                app:tint="@color/colorIcons" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageAddNoteMain"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_add_button"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@+id/layoutQuickActions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutQuickActions" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>