<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".UI.ui.CreateNoteActivity">

        <ScrollView
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageBack"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    app:tint="@color/colorIcons" />

                <ImageView
                    android:id="@+id/imageSave"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/background_done_button"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_done"
                    app:layout_constraintTop_toTopOf="@+id/imageBack"
                    app:layout_constraintBottom_toBottomOf="@+id/imageBack"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/colorIcons" />

                <EditText
                    android:id="@+id/inputNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_bold"
                    android:hint="@string/note_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toStartOf="@+id/imageBack"
                    app:layout_constraintTop_toBottomOf="@+id/imageBack" />

                <TextView
                    android:id="@+id/textDateTime"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorIcons"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintTop_toBottomOf="@+id/inputNoteTitle"
                    app:layout_constraintStart_toStartOf="@+id/inputNoteTitle"
                    app:layout_constraintEnd_toEndOf="@+id/inputNoteTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/inputNoteSubTitle"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@null"
                    android:textColor="@color/colorTextSubtitle"
                    android:textColorHint="@color/colorTextSubtitle"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textDateTime"
                    android:fontFamily="@font/ubuntu_medium"
                    android:hint="@string/note_subtitle"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                
                <View
                    android:id="@+id/viewSubtitleIndicator"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/background_subtitle_indicator"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/inputNoteSubTitle"
                    app:layout_constraintBottom_toBottomOf="@+id/inputNoteSubTitle"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="0dp"/>

                <ImageView
                    android:id="@+id/imageNote"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:adjustViewBounds="true"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/inputNoteSubTitle"
                    android:contentDescription="@string/app_name"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/imageRemoveImage"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/background_delete"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    app:tint="@color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/imageNote"
                    app:layout_constraintTop_toTopOf="@+id/imageNote" />
                
                <LinearLayout
                    android:id="@+id/layoutWebURL"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/imageNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/textWebURL"
                        android:autoLink="web"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/_13ssp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/imageRemoveWebURL"
                        android:src="@drawable/ic_delete"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        app:tint="@color/colorDelete" />

                </LinearLayout>

                <EditText
                    android:id="@+id/inputNote"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutWebURL"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@null"
                    android:hint="@string/type_note_here"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/_100sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="top"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include
            android:id="@+id/miscellaneous"
            layout="@layout/layout_miscellaneous"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>